clang/test/BSC/Negative/Ownership/string_literal_init_error.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

// Test error case for mutable _Borrow of string literal in variable initialization

void test_mut_init() {
  char * _Borrow d = "invalid";  // expected-error {{cannot pass string literal to parameter of type 'char *_Borrow'; string literals are immutable}}
}

int main() {
  test_mut_init();
  return 0;
}
